@@ -1,31 +1,27 @@
 package com.nextroom.nextRoomServer.service;
 
-import static com.nextroom.nextRoomServer.exceptions.StatusCode.*;
-
-import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
-
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
+import static com.nextroom.nextRoomServer.exceptions.StatusCode.NOT_PERMITTED;
+import static com.nextroom.nextRoomServer.exceptions.StatusCode.TARGET_SHOP_NOT_FOUND;
+import static com.nextroom.nextRoomServer.exceptions.StatusCode.TARGET_THEME_NOT_FOUND;
 
 import com.nextroom.nextRoomServer.domain.Shop;
 import com.nextroom.nextRoomServer.domain.Theme;
 import com.nextroom.nextRoomServer.dto.ThemeDto;
 import com.nextroom.nextRoomServer.exceptions.CustomException;
 import com.nextroom.nextRoomServer.repository.ShopRepository;
-import com.nextroom.nextRoomServer.repository.SubscriptionRepository;
 import com.nextroom.nextRoomServer.repository.ThemeRepository;
 import com.nextroom.nextRoomServer.security.SecurityUtil;
-
+import java.util.List;
+import java.util.Objects;
 import lombok.RequiredArgsConstructor;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 @Service
 @RequiredArgsConstructor
 public class ThemeService {
     private final ThemeRepository themeRepository;
     private final ShopRepository shopRepository;
-    private final SubscriptionRepository subscriptionRepository;
 
     private Shop getShop() {
         return shopRepository.findById(SecurityUtil.getCurrentShopId())
@@ -46,7 +42,7 @@ public class ThemeService {
     }
 
     @Transactional
-    public void addTheme(ThemeDto.AddThemeRequest request) {
+    public ThemeDto.AddThemeResponse addTheme(ThemeDto.AddThemeRequest request) {
         //        checkThemeLimitCount();
 
         Theme theme = Theme.builder()
@@ -56,7 +52,7 @@ public class ThemeService {
             .shop(getShop())
             .build();
 
-        themeRepository.save(theme);
+        return new ThemeDto.AddThemeResponse(themeRepository.save(theme).getId());
     }
 
     //    private Integer getThemeLimitCount() {
@@ -81,7 +77,7 @@ public class ThemeService {
         List<Theme> themeList = themeRepository.findAllByShopId(SecurityUtil.getCurrentShopId());
         return themeList.stream()
             .map(ThemeDto.ThemeListResponse::new)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Transactional
